

  Changes affecting backwards compatibility
  -----------------------------------------

  - **The language has been renamed from Nimrod to Nim.** The name of the
    compiler changed from ``nimrod`` to ``nim`` too.
  - ``system.fileHandle`` has been renamed to ``system.getFileHandle`` to
    prevent name conflicts with the new type ``FileHandle``.
  - Comments are now not part of the AST, as such you cannot use them in place
    of ``discard``.
  - Large parts of the stdlib got rid of the T/P type prefixes. Instead most
    types now simply start with an uppercased letter. The
    so called "partial case sensitivity" rule is now active allowing for code
    like ``var foo: Foo`` in more contexts.
  - String case (or any non-ordinal case) statements
    without 'else' are deprecated.
  - Recursive tuple types are not allowed anymore. Use ``object`` instead.
  - The PEGS module returns ``nil`` instead of ``""`` when an optional capture
    fails to match.
  - The re module returns ``nil`` instead of ``""`` when an optional capture
    fails to match.
  - The "symmetric set difference" operator (``-+-``) never worked and has been
    removed.
  - ``defer`` is a keyword now.
  - ``func`` is a keyword now.
  - The ``using`` language feature now needs to be activated via the new
    ``{.experimental.}`` pragma that enables experimental language features.
  - Destructors are now officially *experimental*.
  - Standalone ``except`` and ``finally`` statements are deprecated now.
    The standalone ``finally`` can be replaced with ``defer``,
    standalone ``except`` requires an explicit ``try``.
  - Operators ending in ``>`` are considered as "arrow like" and have their
    own priority level and are right associative. This means that
    the ``=>`` and ``->`` operators from the `future <future.html>`_ module
    work better.
  - Field names in tuples are now ignored for type comparisons. This allows
    for greater interoperability between different modules.

